Remove dob. Fix issue

--- a/views/fonkapps/index.jade
+++ b/views/fonkapps/index.jade
@@ -15,7 +15,7 @@ block content
                 = fonkapp.category
             li
                 = fonkapp.badge
-                = fonkapp.dob
+                //= fonkapp.dob
                 = fonkapp.isloved
                 = fonkapp._id
                 form(action='/fonkapps/#{fonkapp._id}/edit',method='post',enctype='application/x-www-form-urlencoded')
