--- a/views/fonkapps/new.jade
+++ b/views/fonkapps/new.jade
@@ -6,14 +6,12 @@ block content
 	form#formAddFonkapp(name="addfonkapp",method="post",action="/fonkapps")
 		p Name: 
 			input#inputName(type="text", placeholder="ex. John Smith", name="name")
-		p User:
-			input#inputName(type="text", placeholder="55a42ce8b04cbcd1a78782d1", name="user")
 		p Category:
 			input#inputName(type="text", placeholder="ex. Games, Sports, Live Style", name="category")
 		p Badge:
 			input#inputBadge(type="number", placeholder="ex. 123456", name="badge")
-		p DOB: 
-			input#inputDob(type="date", name="dob")
+		//p DOB:
+		//	input#inputDob(type="date", name="dob")
 		p Are You Loved?: 
 			input#inputIsLoved(type="checkbox", name="isloved")
 		p
