--- a/views/fonkapps/show.jade
+++ b/views/fonkapps/show.jade
@@ -7,5 +7,5 @@ block content
     p User: #{fonkapp.user}
     p Category: #{fonkapp.category}
     p Badge: #{fonkapp.badge}
-    p DOB: #{fonkapp}
+    //p DOB: #{fonkapp}
     p Is Loved: #{fonkapp.isloved}
