--- a/views/fonkapps/edit.jade
+++ b/views/fonkapps/edit.jade
@@ -6,14 +6,12 @@ block content
 	form(action='/fonkapps/#{fonkapp._id}/edit',method='post',name='updatefonkapp',enctype='application/x-www-form-urlencoded')
 		p Name:
 			input#inputName(type='text', value='#{fonkapp.name}', name='name')
-		p User:
-			input#inputName(type='text', value='#{fonkapp.user}', name='user')
 		p Category:
 			input#inputName(type='text', value='#{fonkapp.category}', name='category')
 		p Badge:
 			input#inputBadge(type='number', value='#{fonkapp.badge}', name='badge')
-		p DOB:
-			input#inputDob(type='date', value='#{fonkappdob}', name='dob')
+		//p DOB:
+		//	input#inputDob(type='date', value='#{fonkappdob}', name='dob')
 		p Are you Loved?:
 			input#inputIsLoved(type='checkbox', name='isloved', checked=('#{fonkapp.isloved}'==='true' ? "checked" : undefined))
 		p
