--- a/views/fonkapps/show.jade
+++ b/views/fonkapps/show.jade
@@ -6,6 +6,10 @@ block content
     p Name: #{fonkapp.name}
     p User: #{fonkapp.user}
     p Category: #{fonkapp.category}
-    p Badge: #{fonkapp.badge}
+    p Company: #{fonkapp.company}
+    p Flickr ID: #{fonkapp.flickr}
+    p MC dev code: #{fonkapp.mcdevcode}
+    p Add Sense: #{fonkapp.addsense}
+    //p Badge: #{fonkapp.badge}
     //p DOB: #{fonkapp}
-    p Is Loved: #{fonkapp.isloved}
+    //p Is Loved: #{fonkapp.isloved}
