--- a/views/fonkapps/index.jade
+++ b/views/fonkapps/index.jade
@@ -7,18 +7,19 @@ block content
         - each fonkapp, i in fonkapps
             h2
                 = fonkapp.name
-            div
-                |User:
-                = fonkapp.user
+            //div
+            //    |User:
+            //    = fonkapp.user
             div
                 |Category:
                 = fonkapp.category
             li
-                = fonkapp.badge
-                //= fonkapp.dob
-                = fonkapp.isloved
+                = fonkapp.company
                 = fonkapp._id
-                form(action='/fonkapps/#{fonkapp._id}/edit',method='post',enctype='application/x-www-form-urlencoded')
+                = fonkapp.flickr
+                = fonkapp.mcdevcode
+                = fonkapp.addsense
+            form(action='/fonkapps/#{fonkapp._id}/edit',method='post',enctype='application/x-www-form-urlencoded')
                     input(type='hidden',value='DELETE',name='_method')
                     button(type='submit').
                         Delete
