--- a/views/fonkapps/new.jade
+++ b/views/fonkapps/new.jade
@@ -8,11 +8,19 @@ block content
 			input#inputName(type="text", placeholder="ex. John Smith", name="name")
 		p Category:
 			input#inputName(type="text", placeholder="ex. Games, Sports, Live Style", name="category")
-		p Badge:
-			input#inputBadge(type="number", placeholder="ex. 123456", name="badge")
+		p Company Path:
+			input#inputName(type="text", placeholder="ex. com.domain.company", name="company")
+		p Flickr ID:
+			input#inputName(type="text", placeholder="ex. ", name="flickr")
+		p MC dev code:
+			input#inputName(type="text", placeholder="ex. ", name="mcdevcode")
+		p Add Sense:
+			input#inputName(type="text", placeholder="ex. ", name="addsense")
+		//p Badge:
+		//	input#inputBadge(type="number", placeholder="ex. 123456", name="badge")
 		//p DOB:
 		//	input#inputDob(type="date", name="dob")
-		p Are You Loved?: 
-			input#inputIsLoved(type="checkbox", name="isloved")
+		//p Are You Loved?:
+		//	input#inputIsLoved(type="checkbox", name="isloved")
 		p
 			button#btnSubmit(type="submit") submit
