--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,17 +23,15 @@ html
         #navbar-inverse.collapse.navbar-collapse
           ul.nav.navbar-nav
             li: a( href="/signout" ) Signout
-            //li.dropdown
-            //  a.dropdown-toggle( href="#", data-toggle="dropdown", role="button", aria-expanded="false" ) Dropdown
-            //    span.caret
-            //  ul.dropdown-menu( role="menu" )
-            //    li: a( href="#" ) Action
-            //    li: a( href="#" ) Another action
-            //    li: a( href="#" ) Something else here
-            //    li.divider
-            //    li.dropdown-header Nav header
-            //    li: a( href="#" ) Separated link
-            //    li: a( href="#" ) One more separated link
+            li.dropdown
+              a.dropdown-toggle( href="#", data-toggle="dropdown", role="button", aria-expanded="false" ) Dropdown
+                span.caret
+              ul.dropdown-menu( role="menu" )
+                li: a( href="/fonkapps/new" ) New App
+                //li.divider
+                //li.dropdown-header Nav header
+                //li: a( href="#" ) Separated link
+                //li: a( href="#" ) One more separated link
     block content
 
 
